# autonomous-driving-turtlebot-with-reinforcement-learning

./: CMakeLists.txt  Control.py  Plots.py  Qlearning.py  README.md  control_node.py  feedback_control_node.py  learning_node.py  package.xml  scan_node.py
Data/Log_feedback_1/: LogSimParams.txt
Data/Log_feedback_2/: THETA_goal.csv  X_goal.csv
Data/Log_feedback_3/: THETA_goal.csv  X_goal.csv  Y_traj.csv
Data/Log_learning/: EPSILON_per_episode.csv  LogInfo.txt  LogParams.txt  Qtable.csv  StateSpace.csv  T_per_episode.csv  reward_avg_per_episode.csv  reward_max_per_episode.csv  reward_min_per_episode.csv  reward_per_episode.csv  steps_per_episode.csv  t_per_episode.csv
Data/Log_learning_ALPHA_0dot3/: StateSpace.csv  T_per_episode.csv  reward_max_per_episode.csv
Data/Log_learning_ALPHA_0dot5/: T_per_episode.csv  reward_max_per_episode.csv  reward_min_per_episode.csv  steps_per_episode.csv
Data/Log_learning_ALPHA_0dot7/: LogInfo.txt  LogParams.txt  Qtable.csv  T_per_episode.csv  reward_avg_per_episode.csv  reward_max_per_episode.csv  (+3 more)
Log_feedback_1/: X_traj.csv  Y_traj.csv
Log_feedback_2/: LogSimParams.txt  THETA_traj.csv  X_traj.csv  Y_goal.csv  Y_traj.csv
Log_feedback_3/: LogSimParams.txt  THETA_traj.csv  X_traj.csv  Y_goal.csv
Log_learning/: LogInfo.txt  LogParams.txt  Qtable.csv  T_per_episode.csv  reward_avg_per_episode.csv  reward_max_per_episode.csv  reward_min_per_episode.csv  reward_per_episode.csv  steps_per_episode.csv
scripts/: Control.py  Lidar.py  Plots.py  Qlearning.py  control_node.py  feedback_control_node.py  learning_node.py  scan_node.py
(+70 files in other folders)
